タップ後の影をcssで消す
tap-highlight-color追加
-webkit-tap-highlight-color効果なし

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 width: 8vw;
                 height: 8vw;
                 border-radius: 50%;
-                -webkit-tap-highlight-color: rbga(0,0,0,0); /* スマホだと出てくるタップ後の影を透明に */
+                /* スマホだと出てくるタップ後の影を透明に */
+                -webkit-tap-highlight-color: rbga(0,0,0,0);
+                tap-highlight-color: rgba(0, 0, 0, 0);
             }
             #startBtn {
                 width: 8vw;
