--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 border-radius: 50%;
                 /* スマホだと出てくるタップ後の影を透明に */
                 -webkit-tap-highlight-color: rbga(0,0,0,0);
-                tap-highlight-color: rgba(0, 0, 0, 0);
+                cursor: pointer;
             }
             #startBtn {
                 width: 8vw;
