rgbaのスペルの誤りを修正

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
                 height: 8vw;
                 border-radius: 50%;
                 /* スマホだと出てくるタップ後の影を透明に */
-                -webkit-tap-highlight-color: rbga(0,0,0,0);
-                cursor: pointer;
+                -webkit-tap-highlight-color: rgba(0,0,0,0);
             }
             #startBtn {
                 width: 8vw;
