--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
         <title>ランダムに光るボタン（スマホ用）</title>
         <style>
             @charset "UTF-8";
+            div, input, button {
+                font-size:2rem;
+            }
+            input {
+                width: 10rem;
+            }
             #gameScreen {
-                width: 100vw;
-                height: 100vw;
+                width: 100vmin;
+                height: 100vmin;
             }
             button {
                 margin: 1vw;
-                width: 17vw;
-                height: 17vw;
+                width: 17vmin;
+                height: 17vmin;
                 border-radius: 50%;
                 /* スマホだと出てくるタップ後の影を透明に */
                 -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -25,20 +31,19 @@
         </style>
     </head>
     <body>
-        <!-- 回答数と得点を表示 -->
         <div>
             <div>
-                出題回数: <input type="number" id="numQ" value="30"> [個]
+                出題回数：<input type="number" id="numQ" value="30"> 個
             </div>
             <div>
-                出題間隔: <input type="number" id="interval" value="500"> [ms]
+                出題間隔：<input type="number" id="interval" value="500"> ms
             </div>
             <div>
-                得点: <span id="score">0</span> / <span id="numA">0</span>
+                得点：<span id="score">0</span> / <span id="numA">0</span>
             </div>
+            <!-- スタートボタン -->
+            <button id="startBtn">START</button>
         </div>
-        <!-- スタートボタン -->
-        <button id="startBtn">START</button>
         <!-- ゲーム画面 -->
         <div id="gameScreen"></div>
         
