--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>ランダムに光るボタン（スマホ用）</title>
+        <title>ランダムな緑のボタンを押すゲーム</title>
         <style>
             @charset "UTF-8";
             div, input, button {
